--- a/styles.css
+++ b/styles.css
@@ -116,11 +116,17 @@ main {
     padding: 20px;
 }
 
-#icon {
-    width: 50px;
-    height: auto;
+#profile-links {
+    display: flex;
+    justify-content: center;
 }
 
-#profile-link {
-    margin: 0 auto;   
+.icon {
+    width: 50px;
+    height: auto;
+    padding-bottom: 50px;
+}
+
+.profile-link {
+    padding: 20px;
 }
